--- a/redsheet-portal/src/index.html
+++ b/redsheet-portal/src/index.html
@@ -34,7 +34,7 @@
     <script src="assets/js/gantt-chart-d3.js" type="text/javascript"></script>
     <script src="assets/js/gantt-chart-d3.js" type="text/javascript"></script>
     <script src="assets/js/onboarding.js" type="text/javascript"></script>
-
+    <!-- <script src="assets/js/jquery.min.js" type="text/javascript"></script> -->
 </head>
 
 <body>
